syntax = "proto3";

package auth;

option go_package = "./protos";

service AuthService {
  rpc ExchangeCodeForToken (ExchangeCodeRequest) returns (ExchangeCodeResponse);
  rpc GetUserIDFromJwtToken (GetUserIDFromJwtTokenRequest) returns (GetUserIDFromJwtTokenResponse);
}

message ExchangeCodeRequest {
  string code = 1;
  string state = 2;
}

message ExchangeCodeResponse {
  int32 user_id = 1;
  string jwt_token = 2;
  string name = 3;
  string mail = 4;
  string avatar_url = 5;
  string full_name = 6;
}

message GetUserIDFromJwtTokenRequest {
  string jwt_token = 1;
}

message GetUserIDFromJwtTokenResponse {
  int32 user_id = 1;
}
